--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 
-p { color: green; font-family: Verdana; }
+p { color: black; font-family: ; }
 
-img[alt=foto] {float:right;}
+
+/* insert images */
+#foto {
+	float: left;
+	width: 10%;
+	height: auto;
+}
+
