--- a/style.css
+++ b/style.css
@@ -4,8 +4,9 @@ p { color: black; font-family: ; }
 
 /* insert images */
 #foto {
-	float: left;
-	width: 10%;
+	float: right;
+	width: 30%;
 	height: auto;
+	margin: 0px 0px 0px 0px;
 }
 
