--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 
 p { 
 	color: black; 
-	font-family: Adobe Calson Pro;
+	font-family: ;
 	src: url('https://github.com/sestelo/sestelo.github.io/blob/master/adobe_caslon_pro.ttf'); 
 }
 
 
 /* insert images */
+
 #foto {
 	float: left;
 	width: 5%;
@@ -26,3 +27,56 @@ p {
 	margin: 6px 0px 10px 5px;
 }
 
+
+/* navbar */
+
+#navbar {
+	position: absolute;
+	left: 1.5em;
+	top: 5em;
+	width:  8.9%;
+	font-size:  0.85em;
+	padding: 0 0.5em 0 0;
+}
+#navbar * { margin: 0 0 0.25em 0; text-align:  right;}
+#navbar h2 {border:  none; font-size:  1em; padding:  0; border-top:  1px solid #ccc; font-weight: normal; margin-top: 0.65em; padding-top:  0.35em;}
+#navbar ul {list-style:  none;}
+
+#wrap {margin: 3em 15%;}
+
+
+/* contact
+
+#contact {
+	text-align: right;
+    border-right: 1px solid black;
+    top: 10px;
+    bottom: 500px;
+}
+ */
+
+#contact2 {
+  float: right;
+  width: text;
+  padding: 0 0 0 5px;
+  margin-left: 8px;
+  border-left: 1px solid;
+}
+#contact1 {
+  text-align: right;
+}
+
+/* texto */
+
+#texto {
+	text-align: justify;
+	margin-left: 8px;
+}
+
+
+
+/* copyright */
+
+#copyright {
+	text-align: right;
+}
