--- a/style.css
+++ b/style.css
@@ -6,6 +6,32 @@ p {
 }
 
 
+/* links */
+
+/* unvisited link */
+a:link {
+    color: black;
+}
+
+/* visited link */
+a:visited {
+    color: #00FF00;
+}
+
+/* mouse over link */
+a:hover {
+    color: blue;
+}
+
+/* selected link */
+a:active {
+    color: #0000FF;
+}
+
+
+
+
+
 /* insert images */
 
 #foto {
