--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ a:link {
 
 /* visited link */
 a:visited {
-    color: #00FF00;
+    color: red;
 }
 
 /* mouse over link */
@@ -25,7 +25,7 @@ a:hover {
 
 /* selected link */
 a:active {
-    color: #0000FF;
+    color: #orange;
 }
 
 
