--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@ p {
 /* links */
 
 /* unvisited link */
-a {
-	color: blue;
-	text-decoration: underline;
-}
 
 a:active {
 	color: yellow;
@@ -20,12 +16,12 @@ a:active {
 }
 
 a:link {
-	color: blue;
-	text-decoration: underline;
+	color: black;
+	text-decoration: none;
 }
 
 a:visited {
-	color: purple;
+	color: black;
 	text-decoration: none;
 }
 
@@ -35,7 +31,7 @@ a:focus {
 }
 
 a:hover {
-	color: red;
+	color: grey;
 	text-decoration: none;
 }
 
