--- a/style.css
+++ b/style.css
@@ -86,6 +86,13 @@ a:hover {
 	height: auto;
 	margin: -4px 0px 10px 5px;
 }
+#github {
+	float: left;
+	width: 3.2%;
+	height: auto;
+	margin: -4px 0px 10px 5px;
+}
+
 
 
 
