--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body,td{
 	background-color: white;
 	color: black; 
-	font-family: sans-serif;
+	font-family: 'Lato', 'Helvetica Neue', Arial, sans-serif;
 	font-size: 14px;
 	max-width: 940px;
 	margin-left: auto;
@@ -26,9 +26,10 @@ hr {
 
 
 
-h1 {font-size:2.7em;}
+h1 {font-size:22px;}
 
 h2 {font-size:1.8em;}
+
 
 /*tt, code, pre {
    font-family: 'DejaVu Sans Mono', 'Droid Sans Mono', 'Lucida Console', Consolas, Monaco, monospace;
@@ -70,40 +71,39 @@ a:hover {
 
 #foto {
 	float: left;
-	width: 5%;
+	width: 4.7%;
 	height: auto;
-	margin: -10px -5px 10px 0px;
-}
-#linkedin {
-	float: left;
-	width: 3.5%;
-	height: auto;
-	margin: -5px 0px 10px 0px;
-}
-#twitter {
-	float: left;
-	width: 3.2%;
-	height: auto;
-	margin: -4px 0px 10px 5px;
-}
-#github {
-	float: left;
-	width: 3.2%;
-	height: auto;
-	margin: -4px 0px 10px 5px;
+	margin: -5px -5px 0px -10px;
 }
 
 
+
+
+/* name */
+#name {
+	text-align:  center;
+	margin-top: 300px;
+	font-size: 90px;
+}
 
 
 
 /* navbar */
 
-#navbar {
-	text-align:  right;
-	margin-left: 160px;
-	margin-top: 24px;
+#navbarpp {
+	text-align:  center;
+	margin-top: 100px;
+	font-size: 22px;
 }
+
+
+#navbar {
+	float:  right;
+	margin-top: 35px;
+	font-size: 16px;
+}
+
+
 
 
 
@@ -123,10 +123,12 @@ a:hover {
   padding: 0 0 0 5px;
   margin-left: 8px;
   border-left: 1px solid;
+  margin-top: 55px;
 }
 
 #contact1 {
   text-align: right;
+  margin-top: 70px;
 }
 
 
@@ -137,11 +139,8 @@ a:hover {
 
 #texto {
 	text-align: justify;
+
 }
-
-
-
-
 
 
 
