--- a/style.css
+++ b/style.css
@@ -81,7 +81,8 @@ a:hover {
 
 /* name */
 #name {
-	float:  center;
+	float: center;
+	text-align:  center;
 	margin-top: 300px;
 	font-size: 90px;
 }
